# AOC-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md
aoc_lib/: Cargo.toml
aoc_lib/src/: cpu.rs  errors.rs  functional.rs  geometry.rs  lib.rs  math.rs
aoc_lib/src/datastructures/: growable_ring_buffer.rs  mod.rs
aoc_lib/src/geometry/: area.rs  dimensions.rs  direction.rs  finite_grid.rs  grid.rs  light.rs  mod.rs  point.rs  point2d.rs  point3d.rs  polygon.rs
aoc_lib/src/geometry/grid/: bit.rs  bit_grid.rs  finite_grid.rs  grid.rs  grid_like.rs  grid_view.rs  mod.rs
aoc_lib/src/iteration/: generator.rs  linear_sequence.rs  mod.rs  mode.rs  recursive_fold.rs  single.rs  transpose.rs  try_fold_while.rs
aoc_lib/src/iteration/queue/: dedup.rs  mod.rs  recursive_find.rs  recursive_fold.rs  recursive_iter.rs  search_depth.rs
aoc_lib/src/math/: bit.rs  mod.rs  quadratic.rs  range.rs
aoc_lib/src/parsing/: combinators.rs  errors.rs  mod.rs  parsers.rs
aoc_runner/: .gitignore  Cargo.toml
aoc_runner/src/: arguments.rs  main.rs  run.rs  utils.rs
aoc_runner_api/: Cargo.toml
aoc_runner_api/src/: lib.rs
aoc_solvers/: Cargo.toml
aoc_solvers/src/: lib.rs
aoc_solvers/src/aoc_2015/: aoc_2015_day_01.rs  aoc_2015_day_02.rs  aoc_2015_day_03.rs  aoc_2015_day_04.rs  aoc_2015_day_05.rs  aoc_2015_day_06.rs  aoc_2015_day_07.rs  aoc_2015_day_08.rs  aoc_2015_day_09.rs  aoc_2015_day_10.rs  aoc_2015_day_11.rs  aoc_2015_day_12.rs  aoc_2015_day_13.rs  aoc_2015_day_14.rs  aoc_2015_day_15.rs  aoc_2015_day_16.rs  aoc_2015_day_17.rs  aoc_2015_day_18.rs  aoc_2015_day_19.rs  aoc_2015_day_20.rs  aoc_2015_day_21.rs  aoc_2015_day_22.rs  aoc_2015_day_23.rs  aoc_2015_day_24.rs  aoc_2015_day_25.rs  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  (+10 more)
aoc_solvers/src/aoc_2016/: aoc_2016_day_01.rs  aoc_2016_day_02.rs  aoc_2016_day_03.rs  aoc_2016_day_04.rs  aoc_2016_day_05.rs  aoc_2016_day_06.rs  aoc_2016_day_07.rs  aoc_2016_day_08.rs  aoc_2016_day_09.rs  aoc_2016_day_10.rs  aoc_2016_day_11.rs  aoc_2016_day_12.rs  aoc_2016_day_13.rs  aoc_2016_day_14.rs  aoc_2016_day_15.rs  aoc_2016_day_16.rs  aoc_2016_day_17.rs  aoc_2016_day_18.rs  aoc_2016_day_19.rs  aoc_2016_day_20.rs  aoc_2016_day_21.rs  assembunny.rs  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  (+8 more)
aoc_solvers/src/aoc_2017/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  knot_hash.rs  mod.rs
aoc_solvers/src/aoc_2023/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  mod.rs
src/: main.rs
src/lib/: cpu.rs  errors.rs  functional.rs  geometry.rs  io.rs  lib.rs  math.rs  parsing.rs  spatial.rs
src/lib/datastructures/: growable_ring_buffer.rs  mod.rs
src/lib/geometry/: area.rs  dimensions.rs  direction.rs  mod.rs  point2d.rs  point3d.rs  polygon.rs
src/lib/geometry/grid/: bit_grid.rs  finite_grid.rs  grid_like.rs  grid_view.rs  mod.rs
src/lib/iteration/: generator.rs  mod.rs  mode.rs  single.rs  transpose.rs  try_fold_while.rs
src/lib/iteration/queue/: dedup.rs  mod.rs  recursive_find.rs  recursive_fold.rs  recursive_iter.rs  search_depth.rs
src/lib/math/: bit.rs  mod.rs  quadratic.rs  range.rs
src/lib/parsing/: combinators.rs  errors.rs  mod.rs  parsers.rs
src/solvers/: mod.rs
src/solvers/year_2015/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  mod.rs
src/solvers/year_2016/: assembunny.rs  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  mod.rs
src/solvers/year_2017/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  knot_hash.rs  mod.rs
src/solvers/year_2023/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs
src/solvers/year_2024/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  mod.rs
src/solvers/year_2025/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs
