[toolchain]
channel = "nightly"

[package]
name = "aoc_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "2015-day-1"
path = "src/bin/2015/day_1.rs"

[[bin]]
name = "2015-day-2"
path = "src/bin/2015/day_2.rs"

[[bin]]
name = "2015-day-3"
path = "src/bin/2015/day_3.rs"

[[bin]]
name = "2015-day-4"
path = "src/bin/2015/day_4.rs"

[[bin]]
name = "2015-day-5"
path = "src/bin/2015/day_5.rs"

[[bin]]
name = "2015-day-6"
path = "src/bin/2015/day_6.rs"

[[bin]]
name = "2015-day-7"
path = "src/bin/2015/day_7.rs"

[[bin]]
name = "2015-day-8"
path = "src/bin/2015/day_8.rs"

[[bin]]
name = "2015-day-9"
path = "src/bin/2015/day_9.rs"

[[bin]]
name = "2015-day-10"
path = "src/bin/2015/day_10.rs"

[[bin]]
name = "2015-day-11"
path = "src/bin/2015/day_11.rs"

[[bin]]
name = "2015-day-12"
path = "src/bin/2015/day_12.rs"

[[bin]]
name = "2015-day-13"
path = "src/bin/2015/day_13.rs"

[[bin]]
name = "2015-day-14"
path = "src/bin/2015/day_14.rs"

[[bin]]
name = "2015-day-15"
path = "src/bin/2015/day_15.rs"

[[bin]]
name = "2015-day-16"
path = "src/bin/2015/day_16.rs"

[[bin]]
name = "2015-day-17"
path = "src/bin/2015/day_17.rs"

[[bin]]
name = "2015-day-18"
path = "src/bin/2015/day_18.rs"

[[bin]]
name = "2015-day-19"
path = "src/bin/2015/day_19.rs"

[[bin]]
name = "2015-day-20"
path = "src/bin/2015/day_20.rs"

[[bin]]
name = "2015-day-21"
path = "src/bin/2015/day_21.rs"

[[bin]]
name = "2015-day-22"
path = "src/bin/2015/day_22.rs"

[[bin]]
name = "2015-day-23"
path = "src/bin/2015/day_23.rs"

[[bin]]
name = "2015-day-24"
path= "src/bin/2015/day_24.rs"

[[bin]]
name = "2015-day-25"
path = "src/bin/2015/day_25.rs"

[[bin]]
name = "2016-day-1"
path = "src/bin/2016/day_1.rs"

[dependencies]
impl_ops = "0.1.1"
itertools = "0.10.5"
md5 = "0.7.0"
nom = "7.1.1"
num = "0.4.1"
once_cell = "1.17.1"
queues = "1.1.0"
regex = "1.7.0"
serde_json = "1.0.96"
tupletools = "0.3.0"
