[package]
name = "aoc_solvers"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
ahash = "0.8.3"
anyhow = "1.0.75"
arr_macro = "0.2.1"
bitvec = "1.0.1"
composing = "0.2.0"
derive_more = "0.99.17"
hex = { version = "0.4.3", features = ["serde"] }
indexmap = "2.1.0"
itertools = "0.10.5"
jikan = { git = "https://github.com/newo-2001/jikan" }
maplit = "1.0.2"
md5 = "0.7.0"
nom = "7.1.1"
num = "0.4.1"
paste = "1.0.14"
petgraph = "0.6.4"
priority-queue = "1.3.2"
rand = "0.8.5"
rayon = "1.7.0"
serde_json = "1.0.96"
serde_yml = "0.0.12"
static_assertions = "1.1.0"
thiserror = "1.0.47"
tupletools = "0.3.0"
yuki = { git = "https://github.com/newo-2001/yuki" }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
similar_names = "allow"
into_iter_without_iter = "allow"

[lints.rust]
unsafe_code = "forbid"