[package]
name = "aoc_rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "aoc_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
ahash = "0.8.3"
anyhow = "1.0.75"
bitvec = "1.0.1"
derive_more = { version = "2.0.1", features = ["not", "add", "add_assign", "mul", "mul_assign", "display"] }
hex = { version = "0.4.3", features = ["serde"] }
indexmap = "2.1.0"
itertools = "0.14.0"
jikan = { git = "https://github.com/newo-2001/jikan" }
maplit = "1.0.2"
mathru = "0.16.2"
md5 = "0.8.0"
nom = "8.0.0"
nom-language = "0.1.0"
num = "0.4.3"
paste = "1.0.14"
petgraph = "0.8.3"
priority-queue = "2.7.0"
rand = "0.9.2"
rayon = "1.7.0"
recursive = "0.1.1"
serde_json = "1.0.96"
serde_yml = "0.0.12"
thiserror = "2.0.17"
yuki = { git = "https://github.com/newo-2001/yuki" }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
similar_names = "allow"
into_iter_without_iter = "allow"

[lints.rust]
unsafe_code = "forbid"
