[package]
name = "aoc_solvers"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc_solvers"
path = "src/lib.rs"

[dependencies]
aoc_lib = { path = "../aoc_lib" }
aoc_runner_api = { path = "../aoc_runner_api" }
composing = "0.2.0"
derive_more = "0.99.17"
gen-iter = "0.3.0"
hex = { version = "0.4.3", features = ["serde"] }
itertools = "0.10.5"
md5 = "0.7.0"
nom = "7.1.1"
num = "0.4.1"
once_cell = "1.17.1"
paste = "1.0.14"
priority-queue = "1.3.2"
queues = "1.1.0"
rayon = "1.7.0"
serde_json = "1.0.96"
thiserror = "1.0.47"
transpose = "0.2.2"
tupletools = "0.3.0"
