[package]
name = "aoc_solvers"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc_solvers"
path = "src/lib.rs"

[dependencies]
ahash = "0.8.3"
anyhow = "1.0.75"
aoc_lib = { path = "../aoc_lib" }
aoc_runner_api = { path = "../aoc_runner_api" }
arr_macro = "0.2.1"
bitvec = "1.0.1"
composing = "0.2.0"
derive_more = "0.99.17"
hex = { version = "0.4.3", features = ["serde"] }
indexmap = "2.1.0"
itertools = "0.10.5"
maplit = "1.0.2"
md5 = "0.7.0"
nom = "7.1.1"
num = "0.4.1"
paste = "1.0.14"
petgraph = "0.6.4"
priority-queue = "1.3.2"
rayon = "1.7.0"
serde_json = "1.0.96"
static_assertions = "1.1.0"
thiserror = "1.0.47"
tupletools = "0.3.0"
